# Rocos_DragTeach-in

./: README.md  five_joint.m
Rocos_7dof/: CMakeLists.txt
Rocos_7dof/config/: robot_onejoint.urdf
Rocos_7dof/src/: demo_teach_246.cpp  demo_teach_6.cpp
Rocos_7dof_109/: CMakeLists.txt  demo_start.sh  ecm.sh  viz.sh
Rocos_7dof_109/config/: robot.urdf  robot_sun.urdf
Rocos_7dof_109/src/: demo.cpp  demo_teach_246.cpp  demo_teach_6.cpp  demo_teach_all.cpp  demo_teach_all_stop.cpp  demo_teach_stop.cpp  demo_torque_7joint.cpp
Rocos_example_onejoint/: CMakeLists copy.txt  CMakeLists.txt  README.md  ecm.sh
Rocos_example_onejoint/config/: robot_sun_new.urdf
Rocos_example_onejoint/src/: demo.cpp  demo_7_joint.cpp  demo_7_teach.cpp  demo_null.cpp  demo_torque.cpp  demo_torque_7.cpp  demo_torque_onejoint.cpp  demo_torque_servoj.cpp  demo_torque_servoj_2.cpp  joint_target_servo.csv  joint_torques.csv  joint_torques_7dof.csv  joint_torques_fix.csv  joint_torques_hand.csv  only_null.cpp
